--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,87 +1,4 @@
-@font-face {
-    font-family: 'Space Grotesk';
-    src: url('/fonts/SpaceGrotesk-Regular.ttf');
-}
-
-@font-face {
-    font-family: 'Emelind';
-    src: url('/fonts/Emelind.ttf');
-}
-
-@font-face {
-    font-family: 'JetBrains Mono';
-    src: url('/fonts/JetBrainsMono-Regular.ttf');
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Emelind', 'sans-serif';
-}
-
-h1 {
-    font-size: clamp(1rem, -0.875rem + 8.333333vw, 3.5rem);
-}
-
-.font-mono {
-    font-family: 'JetBrains Mono';
-    font-variant-ligatures: common-ligatures;
-}
- 
- 
-.glitch {
-    position: relative;
-    padding: 0;
-
-    &::before, &::after {
-        padding: 0;
-        color: white;
-        content: attr(data-text);
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: black;
-        overflow: hidden;
-        top: 0;
-    }
-
-    &::before {
-        left: 3px;
-        text-shadow: -2px 0 red;
-        animation-name: glitch-animation-1;
-        animation-duration: 2s;
-        animation-timing-function: linear;
-        animation-delay: 0s;
-        animation-iteration-count: infinite;
-        animation-direction: reverse-alternate;
-    }
-
-    &::after {
-        left: -3px;
-        text-shadow: -2px 0 blue;
-        animation-name: glitch-animation-2;
-        animation-duration: 2s;
-        animation-timing-function: linear;
-        animation-delay: 0s;
-        animation-iteration-count: infinite;
-        animation-direction: reverse-alternate;
-    }
-}
-
-@keyframes glitch-animation-1 {
-    $steps: 20;
-
-    @for $i from 0 through $steps {
-        #{percentage(calc($i / $steps))} {
-            clip: rect(random(150)+px, 850px, random(150)+px, 30px);
-        }
-    }
-}
-  
-@keyframes glitch-animation-2 {
-    $steps: 20;
-
-    @for $i from 0 through $steps {
-        #{percentage($i * calc(1 / $steps))} {
-            clip: rect(random(150)+px, 850px, random(150)+px, 30px);
-        }
-    }
-}
+@import "variables";
+@import "globals";
+@import "pages";
+@import "landing";
