--- a/assets/styles/_landing.scss
+++ b/assets/styles/_landing.scss
@@ -1,9 +1,37 @@
+#viewport, #about {
+    .content {
+        opacity: 0;
+    }
+
+    &.fade-in {
+        .content {
+            animation: slide-in 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+        }
+    }
+}
+
+@keyframes slide-in {
+    0% {
+        padding-top: 100px;
+        opacity: 0;
+    }
+
+    100% {
+        padding-top: 0;
+        opacity: 1;
+    }
+}
+
+#viewport {
+    background-color: var(--bg-color);
+}
+
 #about {
-    min-height: 100vh;
-    padding: 2rem;
+    background-color: var(--bg-color-alt);
+    min-height: var(--landing-min-height);
+    padding: var(--landing-padding);
 
     .content {
-        
         display: flex;
 
         .words {
@@ -30,12 +58,124 @@
         }
 
         .prose p:last-of-type::after {
-            content: '▮';
-            color: white;
-            display: inline-block;
-            margin-left: 5px;
-            font-size: 25px;
-            animation: blink .6s linear infinite alternate;
+            @include cursor;
+        }
+    }
+}
+
+#featured {
+    background-color: var(--bg-color);
+    min-height: var(--landing-min-height);
+    padding: 6rem var(--landing-padding);
+
+    .articles, .projects {
+        h2 {
+            font-size: clamp(2rem, 0.75rem + 4vw, 3rem);
+        }
+    }
+
+    .articles {
+        width: 100%;
+        display: flex;
+        gap: 20px;
+        justify-content: space-between;
+    
+        h2 {
+            text-align: right;
+        }
+
+        .list {
+            display: flex;
+            gap: 20px;
+
+            article {
+                position: relative;
+                height: 202px;
+                width: 302px;
+                border: solid 1px white;
+        
+                &:hover {
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        z-index: 1;
+                        background: repeating-linear-gradient(to bottom, transparent 0%, rgba(0, 147, 255, 0.47) 0.5%, transparent 1%);
+                    }
+
+                    .glitch-thumb {
+                        cursor: pointer;
+
+                        .glitch-img {
+                            &:nth-child(n+2) {
+                                opacity: 1;
+                            }                  
+                
+                            &:nth-child(2) {
+                                transform: translate3d(10px,0,0);
+                                animation: glitch-anim-1 4s infinite linear alternate;
+                            }
+                
+                            &:nth-child(3) {
+                                transform: translate3d(calc(-1 * 10px),0,0);
+                                animation: glitch-anim-2 4s infinite linear alternate;
+                            }
+                
+                            &:nth-child(4) {
+                                transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1,-1,1);
+                                animation: glitch-anim-3 4s infinite linear alternate;
+                            }
+                
+                            // Hover flash animation on last image.
+                            &:nth-child(5) {
+                                animation: glitch-anim-flash 0.5s steps(1, end) infinite;
+                            }
+                        }
+                    }
+                }
+                
+                .glitch-thumb {
+                    position: relative;
+                    width: 300px;
+                    height: 200px;
+                    overflow: hidden;
+                    margin: 0 auto;
+                
+                    .glitch-img {
+                        position: absolute;
+                        top: calc(-1 * var(--gap-vertical));
+                        left: calc(-1 * var(--gap-horizontal));
+                        width: calc(100% + var(--gap-horizontal) * 2);
+                        height: calc(100% + var(--gap-vertical) * 2);
+                        background-size: cover;
+                        background-color: transparent;
+                        background-repeat: no-repeat;
+                        background-position: 50% 0;
+                        background-blend-mode: initial;
+                
+                        &:nth-child(5) {
+                            background-color: #af4949;
+                            background-blend-mode: overlay;
+                        }
+                
+                        &:nth-child(n+2) {
+                            opacity: 0;
+                        }
+                    }
+                }  
+
+                .details {
+                    p {
+                        color: white;
+                        &::after {
+                            @include cursor;
+                        }
+                    }
+                }
+            }
         }
     }
 }
