--- a/assets/styles/_glitches.scss
+++ b/assets/styles/_glitches.scss
@@ -174,6 +174,14 @@
 	}
 }
 
+@keyframes btn-glitch {
+    0%   {transform: translate(-2px, 2px);}
+    25%  {transform: translate(-2px, -2px);}
+    50%  {transform: translate(2px, 2px);}
+    75%  {transform: translate(2px, -2px);}
+    100%  {transform: translate(-2px, 2px);}
+}
+
 .glitch {
     position: relative;
     padding: 0;
@@ -239,4 +247,55 @@
     50%  {transform: translate(1px, 1px);}
     75%  {transform: translate(1px, -1px);}
     100%  {transform: translate(-1px, 1px);}
+}
+
+@mixin btn-glitch ($h: 15px, $w: 25px, $fs: 24px) {
+	position: relative;
+    display: inline-block;
+    color: #281130;
+    font-size: $fs;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    z-index: 1;
+    
+    &:before,
+    &:after {
+        content:'';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
+    &:before {
+        background-color: #00ffff;
+        z-index: -1;
+    }
+
+    &:after {
+        background-color: #ff00ff;
+        z-index: -2;
+    }
+    
+    &:hover {
+        .link-inner {
+            animation: btn-glitch 0.3s ease 1;
+        }
+
+        &:before {
+            animation: btn-glitch 0.3s ease 0.3s infinite;
+        }
+        
+        &:after {
+            animation: btn-glitch 0.3s ease infinite reverse;
+        }
+    }
+
+	.inner {
+		display: block;
+		height: 100%;
+		background-color: #fff;
+		padding: $h $w;
+	}
 }
