--- a/assets/styles/_landing.scss
+++ b/assets/styles/_landing.scss
@@ -1,4 +1,4 @@
-#viewport, #about {
+#viewport, #about, #featured {
     .content {
         opacity: 0;
     }
@@ -10,21 +10,58 @@
     }
 }
 
-@keyframes slide-in {
-    0% {
-        padding-top: 100px;
-        opacity: 0;
-    }
-
-    100% {
-        padding-top: 0;
-        opacity: 1;
-    }
-}
-
 #viewport {
     background-color: var(--bg-color);
+    @apply text-white flex justify-center items-center flex-col;
+    height: 100vh;
+
+    .content {
+        position: relative;
+
+        .title {
+            font-size: clamp(2.25rem, -2.75rem + 16vw, 6.25rem);
+            font-weight: 800;
+            text-align: center;
+        }
+
+        .subtitle {
+            color: white;
+            text-align: center;
+            font-size: clamp(1.25rem, 0.4688rem + 2.5vw, 1.875rem);
+        }
+
+        .scroll {
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            top: 38vh;
+
+            p {
+                color: white;
+            }
+        }
+    }
+
+    .input-cursor {
+        display: inline-block;
+        width: 15px;
+        height: 28px;
+        background-color: white;
+        margin-left: 8px;
+        animation: blink .6s linear infinite alternate;
+    }
+    
+    .typed-text {
+        @apply text-xl text-white font-mono;
+    }
+    
+    .typing {
+        animation: none;
+    }
 }
+
+
 
 #about {
     background-color: var(--bg-color-alt);
@@ -32,8 +69,10 @@
     padding: var(--landing-padding);
 
     .content {
-        display: flex;
-
+        @media (min-width: 768px) { 
+            display: flex;
+         }
+        
         .words {
             text-align: center;
             position: relative;
@@ -69,31 +108,53 @@
     padding: 6rem var(--landing-padding);
 
     .articles, .projects {
-        h2 {
-            font-size: clamp(2rem, 0.75rem + 4vw, 3rem);
-        }
-    }
-
-    .articles {
         width: 100%;
-        display: flex;
-        gap: 20px;
-        justify-content: space-between;
+
+        @media (min-width: 768px) {
+            display: flex;
+            column-gap: 20px;
+            justify-content: space-between;
+            margin-bottom: 50px;
+        }
     
-        h2 {
-            text-align: right;
+        .title {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            @media (max-width: 768px) {
+                margin-bottom: 20px;
+            }
+
+            h2 {
+                font-size: clamp(2rem, 0.75rem + 4vw, 3rem);
+                text-align: right;
+            }
+
+            a {
+                @include btn-glitch;
+            }
         }
 
         .list {
             display: flex;
-            gap: 20px;
+            column-gap: 20px;
+
+            @media (max-width: 768px) {
+                flex-direction: column;
+            }
 
             article {
                 position: relative;
-                height: 202px;
-                width: 302px;
-                border: solid 1px white;
-        
+
+                @media (min-width: 768px) {
+                    width: 300px;
+                }
+
+                @media (max-width: 768px) {
+                    margin-bottom: 40px;
+                }
+
                 &:hover {
                     &::before {
                         content: '';
@@ -101,7 +162,7 @@
                         top: 0;
                         left: 0;
                         width: 100%;
-                        height: 100%;
+                        height: 200px;
                         z-index: 1;
                         background: repeating-linear-gradient(to bottom, transparent 0%, rgba(0, 147, 255, 0.47) 0.5%, transparent 1%);
                     }
@@ -139,10 +200,13 @@
                 
                 .glitch-thumb {
                     position: relative;
-                    width: 300px;
                     height: 200px;
                     overflow: hidden;
                     margin: 0 auto;
+
+                    @media (min-width: 768px) {
+                        width: 300px;
+                    }
                 
                     .glitch-img {
                         position: absolute;
@@ -168,14 +232,39 @@
                 }  
 
                 .details {
+                    padding: 0.5rem 0 0 0.25rem;
+
                     p {
                         color: white;
-                        &::after {
-                            @include cursor;
+                        font-size: clamp(1rem, 0.0625rem + 3vw, 1.75rem);;
+                        line-height: 1;
+                    }
+
+                    .tags {
+                        margin-top: 20px;
+
+                        span {
+                            background-color: white;
+                            padding: 2px 4px;
+                            
+                            &:not(:last-child) {
+                                margin-right: 6px;
+                            }
                         }
                     }
                 }
             }
+        }
+    }
+
+    .projects {
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column-reverse;
+        }
+
+        .tags {
+            text-align: right;
         }
     }
 }
