--- a/assets/styles/_globals.scss
+++ b/assets/styles/_globals.scss
@@ -5,13 +5,204 @@
     100% {opacity: 0;}
 }
 
-footer {
-    background-color: var(--bg-color);
+form {
+    .input, .textarea {
+        label {
+            position: absolute;
+            color: #fff;
+            top: 0.75rem;
+            z-index: –1;
+            transform-origin: 0;
+            transition-duration: 300ms;
+        }
+    }
 
-    .brand {
-        @apply self-center text-2xl font-semibold whitespace-nowrap;
-        color: var(--title-color);
+    .input {
+        position: relative;
+        z-index: 0;
+        margin-bottom: 0.5rem;
+
+        input {
+            display: block;
+            width: 100%;
+            appearance: none;
+            border-color: rgb(55 65 81);
+            background-color: transparent;
+            padding: 1rem 0.625rem 0.625rem 0.625rem;
+            font-size: 0.875rem;
+            line-height: 1.25rem;
+            color: #fff;
+            border-bottom-width: 2px;
+            transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 300ms;
+            margin-bottom: 1.25rem;
+            
+            &:focus {
+                @apply outline-none ring-0 border-violet-600;
+            }
+        }
+    }
+
+    .textarea textarea {
+        resize: none;
+        margin-top: 0px;
+        display: block;
+        width: 100%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border-width: 0px;
+        border-bottom-width: 0px;
+        border-bottom-width: 2px;
+        --tw-border-opacity: 1;
+        border-color: rgb(55, 65, 81);
+        background-color: transparent;
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 0.75rem;
+        padding-bottom: 0.5rem;
+        --tw-text-opacity: 1;
+        color: rgb(255 255 255 / var(--tw-text-opacity));
+        
+        &:focus {
+            @apply outline-none ring-0 border-black border-violet-600;
+        }
+    }
+
+    
+    input, textarea {
+        &:focus, &:not(:placeholder-shown) {
+            & ~ label {
+                --tw-translate-x: 0;
+                --tw-translate-y: 0;
+                --tw-rotate: 0;
+                --tw-skew-x: 0;
+                --tw-skew-y: 0;
+                transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate))
+                    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+                --tw-scale-x: 0.75;
+                --tw-scale-y: 0.75;
+                --tw-translate-y: -1.5rem;
+                color: rgb(124 58 237);
+            }
+        }
+
+        &:focus {
+            left: 0px;
+        }
+    }
+
+    button {
+        @include btn-glitch($h: 5px, $w: 10px);
     }
 }
 
-// self-center text-2xl font-semibold whitespace-nowrap
+footer {
+    background-color: var(--bg-color);
+    padding: 2rem 1.5rem;
+
+    @media (min-width: 768px) {
+        padding: 2rem 1.5rem;
+    }
+
+    .first-row {
+        @media (min-width: 640px) {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .brand {
+            display: flex;
+            align-items: center;
+
+            @media (max-width: 639px) {
+                margin-bottom: 1rem;
+            }
+
+            img {
+                height: 2rem;
+                margin-right: 0.75rem;
+            }
+
+            span {
+                @apply self-center text-2xl font-semibold whitespace-nowrap;
+                color: var(--title-color);
+            }
+            
+        }
+
+        .links {
+            display: flex;
+
+            ul {
+                display: flex;
+                align-items: center;
+                font-size: 0.875rem;
+                line-height: 1.25rem;
+                flex-wrap: wrap;
+
+                li a {
+                    margin-right: 1rem;
+                    color: var(--font-color);
+
+                    @media (min-width: 768px) {
+                        margin-right: 1.5rem;
+                    }
+                }
+            }
+
+            .theme {
+                padding: 0.25rem;
+                border: solid 1px var(--font-color);
+                border-radius: 0.25rem;
+            }
+        }
+    }
+    
+    hr {
+        margin: 2rem auto;
+        border-color: rgb(55 65 81);
+    }
+
+    .second-row {
+        @media (min-width: 640px) {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .year {
+            color: var(--font-color); // TEXT COLOR IN DARK MODE?
+            font-size: 0.875rem;
+            line-height: 1.25rem;
+
+            @media (min-width: 640px) {
+                text-align: center;
+            }
+        }
+
+        .links {
+            display: flex;
+            margin-top: 1rem;
+            column-gap: 1rem;
+
+            @media (min-width: 640px) {
+                justify-content: center;
+                margin-top: 0;
+            }
+
+            a svg {
+                color: var(--font-color);
+                width: 1.25rem;
+                height: 1.25rem;
+            }
+        }
+    }
+    
+}
+
+.theme {
+    color: white;
+}
