--- a/assets/styles/_landing.scss
+++ b/assets/styles/_landing.scss
@@ -1,4 +1,4 @@
-#viewport, #about, #featured {
+#viewport, #about, #featured, #contact {
     .content {
         opacity: 0;
     }
@@ -63,8 +63,6 @@
     }
 }
 
-
-
 #about {
     background-color: var(--bg-color-alt);
     min-height: var(--landing-min-height);
@@ -74,32 +72,13 @@
         @media (min-width: 768px) { 
             display: flex;
          }
-        
-        .words {
-            text-align: center;
-            position: relative;
-            height: 300px;
 
-            p {
-                position: absolute;
-                margin: 0;
-                font-size: 3rem;
-                color: rgba(45,45,45,0.8);
-                filter: blur(8px);
-                transition: filter 2s ease, color 2s ease, top 5s ease, left 5s ease;
-                transform: translateX(-50%);
-                top: calc(50% - 1ex);
-                left: 50%;
+        .prose {
+            color: var(--font-color);
 
-                &:hover {
-                    filter: blur(1px);
-                    color: rgba(220, 220, 220, 0.6);
-                }
+            p:last-of-type::after {
+                @include cursor;
             }
-        }
-
-        .prose p:last-of-type::after {
-            @include cursor;
         }
     }
 }
@@ -115,7 +94,10 @@
         @media (min-width: 768px) {
             display: flex;
             column-gap: 20px;
-            margin-bottom: 100px;
+
+            &:first-of-type {
+                margin-bottom: 100px;
+            }
         }
     
         .title {
@@ -268,17 +250,20 @@
             }
         }
     }
+}
 
-    .projects {
-        /*
-        @media (max-width: 768px) {
-            display: flex;
-            flex-direction: column-reverse;
-        }
+#contact {
+    background-color: var(--bg-color-alt);
+    min-height: var(--landing-min-height);
+    padding: var(--landing-padding);
+    display: flex;
+    align-items: center;
 
-        .tags {
-            text-align: right;
-        }
-        */
+    h2 {
+        text-transform: uppercase;
+        font-size: clamp(2rem, 0.75rem + 4vw, 3rem);
+        text-align: right;
+        line-height: 1;
+        color: var(--title-color);
     }
 }
