--- a/assets/styles/_glitches.scss
+++ b/assets/styles/_glitches.scss
@@ -188,12 +188,12 @@
 
     &::before, &::after {
         padding: 0;
-        color: white;
+        color: var(--title-color);
         content: attr(data-text);
         position: absolute;
         width: 100%;
         height: 100%;
-        background: black;
+        background: var(--bg-color);
         overflow: hidden;
         top: 0;
     }
