--- a/assets/styles/_landing.scss
+++ b/assets/styles/_landing.scss
@@ -10,6 +10,10 @@
     }
 }
 
+#about .prose p:last-of-type::after {
+    @include cursor;
+}
+
 #viewport, #about, #featured, #contact {
     .content {
         opacity: 0;
@@ -18,26 +22,6 @@
     &.fade-in {
         .content {
             animation: slide-in 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-        }
-    }
-}
-
-#about {
-    background-color: var(--bg-about);
-    min-height: var(--landing-min-height);
-    padding: var(--landing-padding);
-
-    .content {
-        @media (min-width: 768px) { 
-            display: flex;
-         }
-
-        .prose {
-            color: var(--font-color);
-
-            p:last-of-type::after {
-                @include cursor;
-            }
         }
     }
 }
@@ -197,6 +181,7 @@
                         margin-top: 20px;
 
                         span {
+                            border: solid 1px var(--title-color);
                             background-color: white;
                             padding: 2px 4px;
                             
@@ -208,21 +193,5 @@
                 }
             }
         }
-    }
-}
-
-#contact {
-    background-color: var(--bg-contact);
-    min-height: var(--landing-min-height);
-    padding: var(--landing-padding);
-    display: flex;
-    align-items: center;
-
-    h2 {
-        text-transform: uppercase;
-        font-size: clamp(2rem, 0.75rem + 4vw, 3rem);
-        text-align: right;
-        line-height: 1;
-        color: var(--title-color);
     }
 }
