--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,13 +1,13 @@
 :root {
     /*=== Dark theme (default) ===*/
-    --font-light: rgb(156 163 175);
+    --font-light: rgb(245, 245, 247);
     --title-light: #fff;
     --bg-dark: #12181b;
     --bg-dark-alt: #000;
     --cursor-light: #fff;
 
     /*=== Light theme ===*/
-    --font-dark: #281130;
+    --font-dark: #121212;
     --title-dark: #000;
     --bg-light: #f8f8f8;
     --bg-light-alt: #b2becd;
