--- a/assets/styles/_globals.scss
+++ b/assets/styles/_globals.scss
@@ -50,7 +50,8 @@ form {
             margin-bottom: 1.25rem;
             
             &:focus {
-                @apply outline-none ring-0 border-violet-600;
+                @apply outline-none ring-0;
+                border-color: var(--purple);
             }
         }
     }
@@ -77,7 +78,8 @@ form {
         color: rgb(255 255 255 / var(--tw-text-opacity));
         
         &:focus {
-            @apply outline-none ring-0 border-black border-violet-600;
+            @apply outline-none ring-0 border-black;
+            border-color: var(--purple);
         }
     }
 
