--- a/assets/styles/_landing.scss
+++ b/assets/styles/_landing.scss
@@ -16,6 +16,8 @@
 
 #viewport, #about, #featured, #contact {
     .content {
+        max-width: 1200px;
+        margin: auto;
         opacity: 0;
     }
 
