--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -81,6 +81,10 @@ h1 {
     font-variant-ligatures: common-ligatures;
 }
 
+.slide-in {
+    animation: slide-in 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
 @mixin cursor {
     content: '▮';
     color: var(--cursor-color);
@@ -92,7 +96,7 @@ h1 {
 
 @keyframes slide-in {
     0% {
-        padding-top: 100px;
+        padding-top: 150px;
         opacity: 0;
     }
 
