--- a/assets/styles/_contents.scss
+++ b/assets/styles/_contents.scss
@@ -29,6 +29,13 @@
 
     .projectsList, .articlesList {
         max-width: calc(100% - 40px);
+    }
+
+    .articlesList {
         width: 800px;
+    }
+
+    .projectsList {
+        width: 1000px;
     }
 }
