--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -15,6 +15,10 @@
     @media (max-width: 1200px) {
         margin-bottom: 40px;
     }
+
+    @media (max-width: 768px) {
+        margin-bottom: 20px;
+    }
     
     .glitch-thumb {
         position: relative;
