--- a/assets/styles/_globals.scss
+++ b/assets/styles/_globals.scss
@@ -18,6 +18,12 @@ nav {
 
 form {
     .input, .textarea {
+        margin-bottom: 1.25rem;
+
+        &.error label {
+            color: red;
+        }
+
         label {
             position: absolute;
             color: var(--font-color);
@@ -33,21 +39,22 @@ form {
         z-index: 0;
         margin-bottom: 0.5rem;
 
+        &.error input {
+            border-color: red;
+        }
+
         input {
-            display: block;
-            width: 100%;
-            appearance: none;
+            @apply block w-full appearance-none bg-transparent;
             border-color: rgb(55 65 81);
             background-color: transparent;
             padding: 1rem 0.625rem 0.625rem 0.625rem;
             font-size: 0.875rem;
             line-height: 1.25rem;
-            color: #fff;
+            color: var(--title-color);
             border-bottom-width: 2px;
             transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
             transition-duration: 300ms;
-            margin-bottom: 1.25rem;
             
             &:focus {
                 @apply outline-none ring-0;
@@ -56,30 +63,38 @@ form {
         }
     }
 
-    .textarea textarea {
-        resize: none;
-        margin-top: 0px;
-        display: block;
-        width: 100%;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        border-width: 0px;
-        border-bottom-width: 0px;
-        border-bottom-width: 2px;
-        --tw-border-opacity: 1;
-        border-color: rgb(55, 65, 81);
-        background-color: transparent;
-        padding-left: 0px;
-        padding-right: 0px;
-        padding-top: 0.75rem;
-        padding-bottom: 0.5rem;
-        --tw-text-opacity: 1;
-        color: rgb(255 255 255 / var(--tw-text-opacity));
-        
-        &:focus {
-            @apply outline-none ring-0 border-black;
-            border-color: var(--purple);
+    .textarea {
+        position: relative;
+
+        &.error textarea {
+            border-color: red;
+        }
+
+        textarea {
+            resize: none;
+            margin-top: 0px;
+            display: block;
+            width: 100%;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            border-width: 0px;
+            border-bottom-width: 0px;
+            border-bottom-width: 2px;
+            --tw-border-opacity: 1;
+            border-color: rgb(55, 65, 81);
+            background-color: transparent;
+            padding-left: 0px;
+            padding-right: 0px;
+            padding-top: 0.75rem;
+            padding-bottom: 0.5rem;
+            --tw-text-opacity: 1;
+            color: rgb(255 255 255 / var(--tw-text-opacity));
+            
+            &:focus {
+                @apply outline-none ring-0 border-black;
+                border-color: var(--purple);
+            }
         }
     }
 
