Initial commit, everything commented and minimal required libraries installed

--- a/assets/styles/_globals.scss
+++ b/assets/styles/_globals.scss
@@ -5,7 +5,7 @@
     100% {opacity: 0;}
 }
 
-nav {
+/* nav {
     padding: 0.875rem;
     background-color: #000;
     border-bottom-width: 4px;
@@ -14,9 +14,9 @@ nav {
     .brand span {
         color: #fff;
     }
-}
+} */
 
-form {
+/* form {
     .input, .textarea {
         margin-bottom: 1.25rem;
 
@@ -120,7 +120,7 @@ form {
             left: 0px;
         }
     }
-}
+} */
 
 .theme {
     color: white;
