--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,20 +1,20 @@
 :root {
     /*=== Dark theme (default) ===*/
-    --font-light: rgb(245, 245, 247);
+    /* --font-light: rgb(245, 245, 247);
     --title-light: #fff;
     --bg-dark: #12181b;
     --bg-dark-alt: #000;
     --cursor-light: #fff;
-
+ */
     /*=== Light theme ===*/
-    --font-dark: #121212;
+    /* --font-dark: #121212;
     --title-dark: #000;
     --bg-light: #f8f8f8;
     --bg-light-alt: #b2becd;
-    --cursor-dark: #000;
+    --cursor-dark: #000; */
     
     /*=== Misc. === */
-    --landing-padding: 2rem;
+    /* --landing-padding: 2rem;
     --landing-min-height: 100vh;
     --glitch-width: 100vw;
     --glitch-height: 100vh;
@@ -30,10 +30,10 @@
     --bg-color: var(--bg-dark);
     --bg-footer: var(--bg-dark);
     --bg-color-alt: var(--bg-dark-alt);
-    --bg-cursor: var(--cursor-dark);
+    --bg-cursor: var(--cursor-dark); */
 }
 
-.light {
+/* .light {
     --bg-about: var(--bg-light);
     --bg-contact: var(--bg-light);
     --bg-footer: var(--bg-light);
@@ -42,17 +42,17 @@
     --bg-color: var(--bg-light);
     --bg-color-alt: var(--bg-light-alt);
     --bg-cursor: var(--cursor-light);
-}
+} */
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     :root {
         --landing-padding: 10px;
     }
-}
+} */
 
-body.dark, body.light {
+/* body.dark, body.light {
     background-color: var(--bg-color);
-}
+} */
 
 @font-face {
     font-family: 'Space Grotesk';
