--- a/assets/styles/_landing.scss
+++ b/assets/styles/_landing.scss
@@ -1,4 +1,4 @@
-#index nav {
+/* #index nav {
     position: fixed;
     width: 100vw;
     z-index: 1;
@@ -72,4 +72,4 @@
             }
         }
     }
-}
+} */
