Landing, changed default font, not perfect tho

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,5 +1,8 @@
-@import "variables";
-@import "glitches";
+/* 
+
 @import "globals";
 @import "landing";
-@import "contents";
+@import "contents"; */
+
+@import "variables";
+@import "glitches";
