--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,3 +1,10 @@
+@keyframes blink {
+    0% {opacity: 1;}
+    40% {opacity: 1;}
+    60% {opacity: 0;}
+    100% {opacity: 0;}
+}
+
 :root {
     --purple: hsl(274, 93%, 63%);
     /*=== Dark theme (default) ===*/
