--- a/assets/styles/vuetify.scss
+++ b/assets/styles/vuetify.scss
@@ -2,7 +2,6 @@ $headings: 'Emelind', sans-serif;
 $body: 'Space Grotesk', sans-serif;
 
 @use 'vuetify/styles' with (
-  $heading-font-family: $headings,
-  $body-font-family: $body,
-  
+    $heading-font-family: $headings,
+    $body-font-family: $body
 );
