--- a/assets/styles/_glitches.scss
+++ b/assets/styles/_glitches.scss
@@ -1,192 +1,207 @@
 @keyframes glitch-anim-1 {
-	0% {
-		opacity: 1;
-		transform: translate3d(10px,0,0);
-		clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
-	}
-	2% {
-		clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
-	}
-	4% {
-		clip-path: polygon(0 10%, 100% 10%, 100% 20%, 0 20%);
-	}
-	6% {
-		clip-path: polygon(0 1%, 100% 1%, 100% 2%, 0 2%);
-	}
-	8% {
-		clip-path: polygon(0 33%, 100% 33%, 100% 33%, 0 33%);
-	}
-	10% {
-		clip-path: polygon(0 44%, 100% 44%, 100% 44%, 0 44%);
-	}
-	12% {
-		clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%);
-	}
-	14% {
-		clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
-	}
-	16% {
-		clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
-	}
-	18% {
-		clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
-	}
-	20% {
-		clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
-	}
-	21.9% {
-		opacity: 1;
-		transform: translate3d(10px,0,0);
-	}
-	22%, 100% {
-		opacity: 0;
-		transform: translate3d(0,0,0);
-		clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-	}
+    0% {
+        opacity: 1;
+        transform: translate3d(10px, 0, 0);
+        clip-path: polygon(0 2%, 100% 2%, 100% 5%, 0 5%);
+    }
+    2% {
+        clip-path: polygon(0 15%, 100% 15%, 100% 15%, 0 15%);
+    }
+    4% {
+        clip-path: polygon(0 10%, 100% 10%, 100% 20%, 0 20%);
+    }
+    6% {
+        clip-path: polygon(0 1%, 100% 1%, 100% 2%, 0 2%);
+    }
+    8% {
+        clip-path: polygon(0 33%, 100% 33%, 100% 33%, 0 33%);
+    }
+    10% {
+        clip-path: polygon(0 44%, 100% 44%, 100% 44%, 0 44%);
+    }
+    12% {
+        clip-path: polygon(0 50%, 100% 50%, 100% 20%, 0 20%);
+    }
+    14% {
+        clip-path: polygon(0 70%, 100% 70%, 100% 70%, 0 70%);
+    }
+    16% {
+        clip-path: polygon(0 80%, 100% 80%, 100% 80%, 0 80%);
+    }
+    18% {
+        clip-path: polygon(0 50%, 100% 50%, 100% 55%, 0 55%);
+    }
+    20% {
+        clip-path: polygon(0 70%, 100% 70%, 100% 80%, 0 80%);
+    }
+    21.9% {
+        opacity: 1;
+        transform: translate3d(10px, 0, 0);
+    }
+    22%,
+    100% {
+        opacity: 0;
+        transform: translate3d(0, 0, 0);
+        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    }
 }
 
 @keyframes glitch-anim-2 {
-	0% {
-		opacity: 1;
-		transform: translate3d(calc(-1 * 10px),0,0);
-		clip-path: polygon(0 25%, 100% 25%, 100% 30%, 0 30%);
-	}
-	3% {
-		clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
-	}
-	5% {
-		clip-path: polygon(0 5%, 100% 5%, 100% 20%, 0 20%);
-	}
-	7% {
-		clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
-	}
-	9% {
-		clip-path: polygon(0 40%, 100% 40%, 100% 40%, 0 40%);
-	}
-	11% {
-		clip-path: polygon(0 52%, 100% 52%, 100% 59%, 0 59%);
-	}
-	13% {
-		clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
-	}
-	15% {
-		clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
-	}
-	17% {
-		clip-path: polygon(0 65%, 100% 65%, 100% 40%, 0 40%);
-	}
-	19% {
-		clip-path: polygon(0 45%, 100% 45%, 100% 50%, 0 50%);
-	}
-	20% {
-		clip-path: polygon(0 14%, 100% 14%, 100% 33%, 0 33%);
-	}
-	21.9% {
-		opacity: 1;
-		transform: translate3d(calc(-1 * 10px),0,0);
-	}
-	22%, 100% {
-		opacity: 0;
-		transform: translate3d(0,0,0);
-		clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-	}
+    0% {
+        opacity: 1;
+        transform: translate3d(calc(-1 * 10px), 0, 0);
+        clip-path: polygon(0 25%, 100% 25%, 100% 30%, 0 30%);
+    }
+    3% {
+        clip-path: polygon(0 3%, 100% 3%, 100% 3%, 0 3%);
+    }
+    5% {
+        clip-path: polygon(0 5%, 100% 5%, 100% 20%, 0 20%);
+    }
+    7% {
+        clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
+    }
+    9% {
+        clip-path: polygon(0 40%, 100% 40%, 100% 40%, 0 40%);
+    }
+    11% {
+        clip-path: polygon(0 52%, 100% 52%, 100% 59%, 0 59%);
+    }
+    13% {
+        clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
+    }
+    15% {
+        clip-path: polygon(0 75%, 100% 75%, 100% 75%, 0 75%);
+    }
+    17% {
+        clip-path: polygon(0 65%, 100% 65%, 100% 40%, 0 40%);
+    }
+    19% {
+        clip-path: polygon(0 45%, 100% 45%, 100% 50%, 0 50%);
+    }
+    20% {
+        clip-path: polygon(0 14%, 100% 14%, 100% 33%, 0 33%);
+    }
+    21.9% {
+        opacity: 1;
+        transform: translate3d(calc(-1 * 10px), 0, 0);
+    }
+    22%,
+    100% {
+        opacity: 0;
+        transform: translate3d(0, 0, 0);
+        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    }
 }
 
 @keyframes glitch-anim-3 {
-	0% {
-		opacity: 1;
-		transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1,-1,1);
-		clip-path: polygon(0 1%, 100% 1%, 100% 3%, 0 3%);
-	}
-	1.5% {
-		clip-path: polygon(0 10%, 100% 10%, 100% 9%, 0 9%);
-	}
-	2% {
-		clip-path: polygon(0 5%, 100% 5%, 100% 6%, 0 6%);
-	}
-	2.5% {
-		clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
-	}
-	3% {
-		clip-path: polygon(0 10%, 100% 10%, 100% 10%, 0 10%);
-	}
-	5% {
-		clip-path: polygon(0 30%, 100% 30%, 100% 25%, 0 25%);
-	}
-	5.5% {
-		clip-path: polygon(0 15%, 100% 15%, 100% 16%, 0 16%);
-	}
-	7% {
-		clip-path: polygon(0 40%, 100% 40%, 100% 39%, 0 39%);
-	}
-	8% {
-		clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
-	}
-	9% {
-		clip-path: polygon(0 60%, 100% 60%, 100% 55%, 0 55%);
-	}
-	10.5% {
-		clip-path: polygon(0 30%, 100% 30%, 100% 31%, 0 31%);
-	}
-	11% {
-		clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0 69%);
-	}
-	13% {
-		clip-path: polygon(0 40%, 100% 40%, 100% 41%, 0 41%);
-	}
-	14% {
-		clip-path: polygon(0 80%, 100% 80%, 100% 75%, 0 75%);
-	}
-	14.5% {
-		clip-path: polygon(0 50%, 100% 50%, 100% 51%, 0 51%);
-	}
-	15% {
-		clip-path: polygon(0 90%, 100% 90%, 100% 90%, 0 90%);
-	}
-	16% {
-		clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
-	}
-	18% {
-		clip-path: polygon(0 100%, 100% 100%, 100% 99%, 0 99%);
-	}
-	20% {
-		clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0 71%);
-	}
-	21.9% {
-		opacity: 1;
-		transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1,-1,1);
-	}
-	22%, 100% {
-		opacity: 0;
-		transform: translate3d(0,0,0);
-		clip-path: polygon(0 0, 0 0, 0 0, 0 0);
-	}
+    0% {
+        opacity: 1;
+        transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1, -1, 1);
+        clip-path: polygon(0 1%, 100% 1%, 100% 3%, 0 3%);
+    }
+    1.5% {
+        clip-path: polygon(0 10%, 100% 10%, 100% 9%, 0 9%);
+    }
+    2% {
+        clip-path: polygon(0 5%, 100% 5%, 100% 6%, 0 6%);
+    }
+    2.5% {
+        clip-path: polygon(0 20%, 100% 20%, 100% 20%, 0 20%);
+    }
+    3% {
+        clip-path: polygon(0 10%, 100% 10%, 100% 10%, 0 10%);
+    }
+    5% {
+        clip-path: polygon(0 30%, 100% 30%, 100% 25%, 0 25%);
+    }
+    5.5% {
+        clip-path: polygon(0 15%, 100% 15%, 100% 16%, 0 16%);
+    }
+    7% {
+        clip-path: polygon(0 40%, 100% 40%, 100% 39%, 0 39%);
+    }
+    8% {
+        clip-path: polygon(0 20%, 100% 20%, 100% 21%, 0 21%);
+    }
+    9% {
+        clip-path: polygon(0 60%, 100% 60%, 100% 55%, 0 55%);
+    }
+    10.5% {
+        clip-path: polygon(0 30%, 100% 30%, 100% 31%, 0 31%);
+    }
+    11% {
+        clip-path: polygon(0 70%, 100% 70%, 100% 69%, 0 69%);
+    }
+    13% {
+        clip-path: polygon(0 40%, 100% 40%, 100% 41%, 0 41%);
+    }
+    14% {
+        clip-path: polygon(0 80%, 100% 80%, 100% 75%, 0 75%);
+    }
+    14.5% {
+        clip-path: polygon(0 50%, 100% 50%, 100% 51%, 0 51%);
+    }
+    15% {
+        clip-path: polygon(0 90%, 100% 90%, 100% 90%, 0 90%);
+    }
+    16% {
+        clip-path: polygon(0 60%, 100% 60%, 100% 60%, 0 60%);
+    }
+    18% {
+        clip-path: polygon(0 100%, 100% 100%, 100% 99%, 0 99%);
+    }
+    20% {
+        clip-path: polygon(0 70%, 100% 70%, 100% 71%, 0 71%);
+    }
+    21.9% {
+        opacity: 1;
+        transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1, -1, 1);
+    }
+    22%,
+    100% {
+        opacity: 0;
+        transform: translate3d(0, 0, 0);
+        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    }
 }
 
 @keyframes glitch-anim-flash {
-	0% {
-		opacity: 0.2;
-		transform: translate3d(10px, 5px, 0);
-	}
-	33%, 100% {
-		opacity: 0;
-		transform: translate3d(0,0,0);
-	}
+    0% {
+        opacity: 0.2;
+        transform: translate3d(10px, 5px, 0);
+    }
+    33%,
+    100% {
+        opacity: 0;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 @keyframes btn-glitch {
-    0%   {transform: translate(-2px, 2px);}
-    25%  {transform: translate(-2px, -2px);}
-    50%  {transform: translate(2px, 2px);}
-    75%  {transform: translate(2px, -2px);}
-    100%  {transform: translate(-2px, 2px);}
+    0% {
+        transform: translate(-2px, 2px);
+    }
+    25% {
+        transform: translate(-2px, -2px);
+    }
+    50% {
+        transform: translate(2px, 2px);
+    }
+    75% {
+        transform: translate(2px, -2px);
+    }
+    100% {
+        transform: translate(-2px, 2px);
+    }
 }
 
 .glitch {
     position: relative;
     padding: 0;
 
-    &::before, &::after {
+    &::before,
+    &::after {
         padding: 0;
         color: var(--title-color);
         content: attr(data-text);
@@ -222,35 +237,37 @@
 }
 
 .border-glitch {
-	position: relative;
-	display: inline-block;
-	font-size: 24px;
-	text-decoration: none;
-	letter-spacing: 0.1em;
-	color: #fff;
-	font-weight: lighter;
-	z-index: 1;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.75);
-	padding-bottom: 10px;
+    position: relative;
+    display: inline-block;
+    font-size: 24px;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+    color: #fff;
+    font-weight: lighter;
+    z-index: 1;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.75);
+    padding-bottom: 10px;
 
-	&:focus {
-		&::before, &::after {
-			visibility: visible;
-			animation: border-glitchy 0.3s ease 0.3s infinite;
-		}
-	}
+    &:focus {
+        &::before,
+        &::after {
+            visibility: visible;
+            animation: border-glitchy 0.3s ease 0.3s infinite;
+        }
+    }
 
-	&::before, &::after {
-		content: '';
-		position: absolute;
-		bottom: -1px;
-		left: 0;
-		right: 0;
-		height: 1px;
-		visibility: hidden;
-	}
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        right: 0;
+        height: 1px;
+        visibility: hidden;
+    }
 
-	&:before {
+    &:before {
         color: #00ffff;
         z-index: -1;
     }
@@ -266,7 +283,7 @@
 
     @for $i from 0 through $steps {
         #{percentage(calc($i / $steps))} {
-            clip: rect(random(150)+px, 850px, random(150)+px, 30px);
+            clip: rect(random(150) + px, 850px, random(150) + px, 30px);
         }
     }
 }
@@ -276,31 +293,41 @@
 
     @for $i from 0 through $steps {
         #{percentage($i * calc(1 / $steps))} {
-            clip: rect(random(150)+px, 850px, random(150)+px, 30px);
+            clip: rect(random(150) + px, 850px, random(150) + px, 30px);
         }
     }
 }
 
 @keyframes border-glitchy {
-    0%   {transform: translate(-1px, 1px);}
-    25%  {transform: translate(-1px, -1px);}
-    50%  {transform: translate(1px, 1px);}
-    75%  {transform: translate(1px, -1px);}
-    100%  {transform: translate(-1px, 1px);}
+    0% {
+        transform: translate(-1px, 1px);
+    }
+    25% {
+        transform: translate(-1px, -1px);
+    }
+    50% {
+        transform: translate(1px, 1px);
+    }
+    75% {
+        transform: translate(1px, -1px);
+    }
+    100% {
+        transform: translate(-1px, 1px);
+    }
 }
 
-@mixin btn-glitch ($h: 15px, $w: 25px, $fs: 24px) {
-	position: relative;
+@mixin btn-glitch($h: 15px, $w: 25px, $fs: 24px) {
+    position: relative;
     display: inline-block;
     color: #281130;
     font-size: $fs;
     letter-spacing: 0.02em;
     text-decoration: none;
     z-index: 1;
-    
+
     &:before,
     &:after {
-        content:'';
+        content: '';
         position: absolute;
         top: 0;
         left: 0;
@@ -317,7 +344,7 @@
         background-color: #ff00ff;
         z-index: -2;
     }
-    
+
     &:hover {
         .link-inner {
             animation: btn-glitch 0.3s ease 1;
@@ -326,16 +353,16 @@
         &:before {
             animation: btn-glitch 0.3s ease 0.3s infinite;
         }
-        
+
         &:after {
             animation: btn-glitch 0.3s ease infinite reverse;
         }
     }
 
-	.inner {
-		display: block;
-		height: 100%;
-		background-color: #fff;
-		padding: $h $w;
-	}
+    .inner {
+        display: block;
+        height: 100%;
+        background-color: #fff;
+        padding: $h $w;
+    }
 }
