--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "glitches";
+@import 'variables';
+@import 'glitches';
 
 .glitch-thumb {
     --gap-vertical: 5px;
@@ -26,7 +26,7 @@
             background-blend-mode: overlay;
         }
 
-        &:nth-child(n+2) {
+        &:nth-child(n + 2) {
             opacity: 0;
         }
     }
@@ -39,26 +39,31 @@
             width: 100%;
             height: 200px;
             z-index: 1;
-            background: repeating-linear-gradient(to bottom, transparent 0%, rgba(0, 147, 255, 0.47) 1%, transparent 1%);
+            background: repeating-linear-gradient(
+                to bottom,
+                transparent 0%,
+                rgba(0, 147, 255, 0.47) 1%,
+                transparent 1%
+            );
         }
 
         .glitch-img {
-            &:nth-child(n+2) {
+            &:nth-child(n + 2) {
                 opacity: 1;
             }
 
             &:nth-child(2) {
-                transform: translate3d(10px,0,0);
+                transform: translate3d(10px, 0, 0);
                 animation: glitch-anim-1 4s infinite linear alternate;
             }
 
             &:nth-child(3) {
-                transform: translate3d(calc(-1 * 10px),0,0);
+                transform: translate3d(calc(-1 * 10px), 0, 0);
                 animation: glitch-anim-2 4s infinite linear alternate;
             }
 
             &:nth-child(4) {
-                transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1,-1,1);
+                transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1, -1, 1);
                 animation: glitch-anim-3 4s infinite linear alternate;
             }
 
