--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -1,23 +1,22 @@
-@import "variables";
+@import 'variables';
 
-@mixin cursor ($fontSize) {
+@mixin cursor($fontSize) {
     content: '▮';
     color: var(--font-color);
     display: inline-block;
     margin-left: 5px;
     font-size: $fontSize;
-    animation: blink .6s linear infinite alternate;
+    animation: blink 0.6s linear infinite alternate;
 }
 
-@mixin content-item ($width, $articlesToo: true) {
+@mixin content-item($width, $articlesToo: true) {
     position: relative;
 
     @if ($articlesToo) {
         @media (min-width: 768px) {
             width: #{$width};
         }
-    }
-    @else {
+    } @else {
         width: 100%;
     }
 
@@ -56,14 +55,14 @@
                 background-blend-mode: overlay;
             }
 
-            &:nth-child(n+2) {
+            &:nth-child(n + 2) {
                 opacity: 0;
             }
         }
     }
 }
 
-@mixin glitch-items ($x-lines: false) {
+@mixin glitch-items($x-lines: false) {
     cursor: pointer;
 
     @if ($x-lines) {
@@ -75,27 +74,32 @@
             width: 100%;
             height: 200px;
             z-index: 1;
-            background: repeating-linear-gradient(to bottom, transparent 0%, rgba(0, 147, 255, 0.47) 1%, transparent 1%);
+            background: repeating-linear-gradient(
+                to bottom,
+                transparent 0%,
+                rgba(0, 147, 255, 0.47) 1%,
+                transparent 1%
+            );
         }
     }
 
     .glitch-img {
-        &:nth-child(n+2) {
+        &:nth-child(n + 2) {
             opacity: 1;
         }
 
         &:nth-child(2) {
-            transform: translate3d(10px,0,0);
+            transform: translate3d(10px, 0, 0);
             animation: glitch-anim-1 4s infinite linear alternate;
         }
 
         &:nth-child(3) {
-            transform: translate3d(calc(-1 * 10px),0,0);
+            transform: translate3d(calc(-1 * 10px), 0, 0);
             animation: glitch-anim-2 4s infinite linear alternate;
         }
 
         &:nth-child(4) {
-            transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1,-1,1);
+            transform: translate3d(0, calc(-1 * 5px), 0) scale3d(-1, -1, 1);
             animation: glitch-anim-3 4s infinite linear alternate;
         }
 
